{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 130,
  "lineage": "bfb1fefb-ec94-5d5f-b845-c05a0dfe67d7",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgprv",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/networkSecurityGroups/sow-nsgprv-w3dsn8",
            "location": "westeurope",
            "name": "sow-nsgprv-w3dsn8",
            "resource_group_name": "rg-terraform-ottobock",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Required for Databricks control plane communication with worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5557",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-proxy",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for Databricks control plane management of worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-ssh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks Webapp.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg_name",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/networkSecurityGroups/sow-nsgpub-w3dsn8",
            "location": "westeurope",
            "name": "sow-nsgpub-w3dsn8",
            "resource_group_name": "rg-terraform-ottobock",
            "security_rule": [
              {
                "access": "Allow",
                "description": "Required for Databricks control plane communication with worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "5557",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-proxy",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for Databricks control plane management of worker nodes.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-control-plane-to-worker-ssh",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "AzureDatabricks",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker communication with Azure Eventhub services.",
                "destination_address_prefix": "EventHub",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "9093",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-eventhub",
                "priority": 104,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-inbound",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for worker nodes communication within a cluster.",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-worker-outbound",
                "priority": 103,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure SQL services.",
                "destination_address_prefix": "Sql",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-sql",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Azure Storage services.",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-storage",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Required for workers communication with Databricks Webapp.",
                "destination_address_prefix": "AzureDatabricks",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Microsoft.Databricks-workspaces_UseOnly_databricks-worker-to-databricks-webapp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg_name",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "abdprv",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.68.194.192/26"
            ],
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbprv-w3dsn8",
            "name": "sow-adbprv-w3dsn8",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-terraform-ottobock",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "sow-vnet-w3dsn8"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_sow",
            "data.azurerm_resource_group.rg_name",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "adbpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "100.68.194.64/26"
            ],
            "delegation": [
              {
                "name": "databricks-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action",
                      "Microsoft.Network/virtualNetworks/subnets/prepareNetworkPolicies/action",
                      "Microsoft.Network/virtualNetworks/subnets/unprepareNetworkPolicies/action"
                    ],
                    "name": "Microsoft.Databricks/workspaces"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbpub-w3dsn8",
            "name": "sow-adbpub-w3dsn8",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-terraform-ottobock",
            "service_endpoints": [
              "Microsoft.ContainerRegistry",
              "Microsoft.KeyVault",
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "sow-vnet-w3dsn8"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet_sow",
            "data.azurerm_resource_group.rg_name",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_associationprv",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbprv-w3dsn8",
            "network_security_group_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/networkSecurityGroups/sow-nsgprv-w3dsn8",
            "subnet_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbprv-w3dsn8"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgprv",
            "azurerm_subnet.abdprv",
            "azurerm_virtual_network.vnet_sow",
            "data.azurerm_resource_group.rg_name",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_associationpub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbpub-w3dsn8",
            "network_security_group_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/networkSecurityGroups/sow-nsgpub-w3dsn8",
            "subnet_id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbpub-w3dsn8"
          },
          "dependencies": [
            "azurerm_network_security_group.nsgpub",
            "azurerm_subnet.adbpub",
            "azurerm_virtual_network.vnet_sow",
            "data.azurerm_resource_group.rg_name",
            "random_string.postfix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_sow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "100.68.194.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cc92c71a-9c11-4395-ab85-fd8a3ab02d74",
            "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8",
            "location": "westeurope",
            "name": "sow-vnet-w3dsn8",
            "resource_group_name": "rg-terraform-ottobock",
            "subnet": [
              {
                "address_prefix": "100.68.194.128/27",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-backend_subnet-w3dsn8",
                "name": "sow-backend_subnet-w3dsn8"
              },
              {
                "address_prefix": "100.68.194.160/27",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-frontend_subnet-w3dsn8",
                "name": "sow-frontend_subnet-w3dsn8"
              },
              {
                "address_prefix": "100.68.194.192/26",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbprv-w3dsn8",
                "name": "sow-adbprv-w3dsn8",
                "security_group": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/networkSecurityGroups/sow-nsgprv-w3dsn8"
              },
              {
                "address_prefix": "100.68.194.64/26",
                "id": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/virtualNetworks/sow-vnet-w3dsn8/subnets/sow-adbpub-w3dsn8",
                "name": "sow-adbpub-w3dsn8",
                "security_group": "/subscriptions/1bade78d-e58a-48ff-b015-81fc75d62dc0/resourceGroups/rg-terraform-ottobock/providers/Microsoft.Network/networkSecurityGroups/sow-nsgpub-w3dsn8"
              }
            ]
          },
          "dependencies": [
            "data.azurerm_resource_group.rg_name",
            "random_string.postfix"
          ]
        }
      ]
    }
  ]
}